@@ -1,3 +1,13 @@
+2011-10-05  Mikhail Naganov  <mnaganov@chromium.org>
+
+        Web Inspector: [Chromium] Heap Snapshot colors legend help popup is not shown.
+        https://bugs.webkit.org/show_bug.cgi?id=69482
+
+        Reviewed by Yury Semikhatsky.
+
+        * inspector/front-end/DetailedHeapshotView.js:
+        (WebInspector.DetailedHeapshotView.prototype._helpClicked):
+
 2011-10-05  Pavel Feldman  <pfeldman@google.com>
 
         Web Inspector: add 10 more front-end classes to the compilation process.
